# newsbridge

./: .env.example  .gitignore  README.md  docker-compose.yml  next-things-to-work-on.txt
backend/: Dockerfile  main.py  pyproject.toml
backend/backend/: config.py  database.py  models.py
backend/backend/services/: polling.py  translation.py
backend/newsbridge_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_article_detail.py  test_article_no_translation.py  test_articles.py  test_sources.py  test_title_translation.py  test_title_translation_integration.py  test_translate_cached.py  test_translate_queued.py
docs/: PLAN.md
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/.svelte-kit/types/: route_meta_data.json
frontend/.svelte-kit/types/src/routes/: $types.d.ts
frontend/.svelte-kit/types/src/routes/article/[id]/: $types.d.ts
frontend/src/: app.html  test-app-stores.ts  test-setup.ts
frontend/src/lib/: ArticleDetail.svelte  ArticleDetail.test.ts  ArticleFeed.svelte  ArticleFeed.test.ts  api.test.ts  api.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/article/[id]/: +page.svelte
