[project]
name = "newsbridge-backend"
version = "0.1.0"
description = "Newsbridge backend: RSS ingestion, translation, API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "feedparser>=6.0",
    "fasttext-wheel>=0.9",
    "apscheduler>=3.10",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
